--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angular-highcharts": "^8.0.3",
     "hammerjs": "^2.0.8",
+    "highcharts": "^7.2.0",
     "moment": "^2.24.0",
     "ngx-moment": "^3.4.0",
     "rxjs": "~6.4.0",
